<resources>
    <string name="app_name">kt-app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admission_no">Admission No</string>
    <string name="enter_here">enter here</string>
    <string name="nid_number">NID Number</string>
    <string name="patient_data">Patient Data</string>
    <string name="registering_a_patient">Registering a Patient</string>
    <string name="name">Name (First Name, Surname)</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="bmi">BMI</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="nic">NIC Number</string>
    <string name="district">District</string>
    <string name="continue_text">Continue</string>
    <string name="cancel">cancel</string>
    <string name="medical_history">Medical History</string>
    <string name="diabetes_mellitus">Diabetes Mellitus in Patients</string>
    <string name="allergies">Allergies</string>
    <string name="record_wound_details">Record Wound Details</string>
    <string name="create_profile">create profile</string>
    <string name="need_help">Report a problem or need help?</string>
    <string name="site">Site</string>
    <string name="add_wound_image">Add Wound Image</string>
    <string name="wound_size">Wound Size</string>
    <string name="other">Other</string>
    <string name="osteomyelitis">Osteomyelitis</string>
    <string name="type">Type</string>
    <string name="complications">Complications</string>
    <string name="save_wound">save wound</string>
    <string name="content">Content</string>
    <string name="slough">Slough</string>
    <string name="granulation">Granulation</string>
    <string name="developed_by">developed by Variant Innovations</string>
    <string name="forgotten_password"><u>Forgotten Password Report a problem or need help?</u></string>
    <string name="is_supported_screen">false</string>
</resources>
