<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.register_patient.RegisteringPatientInfo">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/registering_a_patient"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvTitle"
        android:layout_margin="25dp"
        android:background="@drawable/white_bg">

        <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/patient_data"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tvSubTitle"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inner_white_bg"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/nid_number"
                        android:textColor="@color/textDarkBlue"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="enter here"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/admission_no"
                        android:textColor="@color/textDarkBlue"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/enter_here"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingStart="10dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/name"
                        android:textColor="@color/textDarkBlue"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="enter here"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingStart="10dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/dob"
                        android:textColor="@color/textDarkBlue"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="enter here"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/gender"
                        android:textColor="@color/textDarkBlue"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="47dp"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="0dp"
                            android:layout_height="47dp"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="Male"
                            android:textColor="@color/textAsh"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="0dp"
                            android:layout_height="47dp"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:checked="false"
                            android:text="Female"
                            android:textColor="@color/textAsh"
                            android:textSize="14sp" />
                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>